fixed background on ios phones, added excel converter

--- a/src/app/information/information.component.scss
+++ b/src/app/information/information.component.scss
@@ -1,12 +1,10 @@
 .container {
-  min-height: 100vh;
-  width: 100%;
+  min-height: 100dvh;
   overflow: hidden;
   color: #0a2239;
   background: url("/background.jpg") no-repeat center center;
   ;
   background-color: rgb(255, 255, 255);
-  background-size: calc(100%) calc(100% - 12%);
   background-position: center;
   background-size: cover;
   /* vízszintesen középen, függőlegesen lent */
@@ -15,8 +13,6 @@
   justify-content: center;
   align-items: center;
   display: flex;
-
-
 }
 
 .content {
@@ -26,7 +22,7 @@
   justify-items: center;
   align-items: center;
   gap: 80px;
-  margin-bottom:200px;
+  margin-bottom: 200px;
 }
 
 .content div {
@@ -58,4 +54,8 @@ h2 {
   width: 80%;
 }
 
-@media (max-width: 1024px) {}
+@media screen and (max-device-width: 1024px) {
+  .container {
+    background: #ffffff;
+  }
+}
